// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Favorite tracks view container should display empty state 1`] = `
<DocumentFragment>
  <div
    class="main_layout_container"
  >
    <div
      class="favorite_tracks_view"
    >
      <div
        class="empty_state"
      >
        <i
          class="icons"
        >
          <i
            aria-hidden="true"
            class="heart icon"
          />
          <i
            aria-hidden="true"
            class="music corner icon"
          />
        </i>
        <h2>
          No favorites added
        </h2>
        <div>
          Try adding some tracks to favorites and they will appear here!
        </div>
      </div>
    </div>
  </div>
  <div
    class="nuclear player_bar"
  >
    <div
      class="nuclear seekbar"
      data-testid="seekbar"
    >
      <div
        class="nuclear seekbar_progress"
        data-testid="seekbar-fill"
        style="width: 0%;"
      />
    </div>
    <div
      class="player_bar_bottom"
    >
      <div
        class="track_info"
      >
        <div
          class="nuclear cover_container"
        />
      </div>
      <div
        class="player_controls"
      >
        <button
          class="player_button disabled"
          data-testid="player-controls-back"
        >
          <i
            aria-hidden="true"
            class="step backward large inverted icon"
          />
        </button>
        <button
          class="player_button disabled"
          data-testid="player-controls-play"
        >
          <i
            aria-hidden="true"
            class="play big inverted icon"
          />
        </button>
        <button
          class="player_button disabled"
          data-testid="player-controls-forward"
        >
          <i
            aria-hidden="true"
            class="step forward large inverted icon"
          />
        </button>
      </div>
      <div
        class="volume_controls_container"
      >
        <div
          class="play_options"
        >
          <i
            aria-hidden="true"
            class="heartbeat large icon play_option_icon"
            data-testid="rate-play-option"
          />
          <i
            aria-hidden="true"
            class="repeat large icon play_option_icon"
            data-testid="loop-play-option"
          />
          <i
            aria-hidden="true"
            class="random large icon play_option_icon"
            data-testid="shuffle-play-option"
          />
          <i
            aria-hidden="true"
            class="magic large icon play_option_icon"
            data-testid="autoradio-play-option"
          />
          <i
            aria-hidden="true"
            class="compress large icon play_option_icon"
            data-testid="mini-player-play-option"
          />
        </div>
        <div
          class="volume_controls"
        >
          <div
            class="volume_icon"
          >
            <i
              aria-hidden="true"
              class="volume up large icon"
            />
          </div>
          <div
            class="volume_slider"
          >
            <div
              class="range"
              style="width: 100%;"
            >
              <div
                class="baseDiv"
                style="height: 12px;"
              >
                <div
                  class="track"
                  style="border-radius: 4px; background: rgb(68, 71, 90); top: 4px; height: 4px;"
                />
                <div
                  class="fill"
                  style="border-radius: 4px; background: rgb(248, 248, 242); width: calc(100% * 0.5 + 6px); top: 4px; height: 4px;"
                />
                <div
                  class="thumb"
                  style="width: 12px; height: 12px; border-radius: 12px; background: rgb(248, 248, 242);"
                />
                <input
                  class="range_input"
                  max="100"
                  min="0"
                  style="top: 4px; height: 12px; width: calc(100% - 12px); margin-left: 6px; margin-right: 6px;"
                  type="range"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Favorite tracks view container should display favorite tracks 1`] = `
<DocumentFragment>
  <div
    class="main_layout_container"
  >
    <div
      class="favorite_tracks_view"
    >
      <div
        class="header_container"
      >
        Your favorite tracks
        <button
          class="ui large basic icon button nuclear button"
          data-testid="favorite-tracks-header-play-random"
        >
          <i
            aria-hidden="true"
            class="gift icon"
          />
        </button>
      </div>
      <div
        class="ui segment favorite_tracks_segment"
      >
        <div
          class="track_table_wrapper"
        >
          <div
            class="track_table_filter_row"
          >
            <div
              class="ui input track_table_filter_input"
              data-testid="track-table-filter-input"
            >
              <input
                placeholder="Filter..."
                type="text"
                value=""
              />
            </div>
            <button
              class="ui blue icon button nuclear button borderless track_table_filter_button"
            >
              <i
                aria-hidden="true"
                class="filter icon"
              />
            </button>
          </div>
          <div
            class="grid_track_table"
            role="table"
          >
            <div
              class="track_table_head"
            >
              <div
                class="track_table_header_row"
                role="row"
                style="grid-template-columns: 7.5em 4em 3em minmax(8em, 1fr) 6em 3em auto;"
              >
                <div
                  class="track_table_header_cell"
                  colspan="1"
                  role="columnheader"
                >
                  <div
                    class="selection_header"
                  >
                    <div
                      class="ui fitted checkbox nuclear checkbox"
                      style="cursor: pointer;"
                    >
                      <input
                        class="hidden"
                        readonly=""
                        tabindex="0"
                        title="Toggle All Rows Selected"
                        type="checkbox"
                        value=""
                      />
                      <label />
                    </div>
                  </div>
                </div>
                <div
                  class="track_table_header_cell"
                  colspan="1"
                  role="columnheader"
                  style="cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="text_header centered"
                    data-testid="position-header"
                  >
                    <i
                      aria-hidden="true"
                      class="hashtag icon"
                    />
                    <i
                      aria-hidden="true"
                      class="sort content ascending icon text_header_icon"
                    />
                  </div>
                </div>
                <div
                  class="track_table_header_cell"
                  colspan="1"
                  role="columnheader"
                  style="cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="text_header"
                  >
                    <i
                      aria-hidden="true"
                      class="image icon"
                    />
                  </div>
                </div>
                <div
                  class="track_table_header_cell"
                  colspan="1"
                  role="columnheader"
                  style="cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="text_header"
                  >
                    Title
                  </div>
                </div>
                <div
                  class="track_table_header_cell"
                  colspan="1"
                  role="columnheader"
                  style="cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="text_header"
                  >
                    Artist
                  </div>
                </div>
                <div
                  class="track_table_header_cell"
                  colspan="1"
                  role="columnheader"
                >
                   
                </div>
              </div>
            </div>
            <div
              class="track_table_body"
              data-rbd-droppable-context-id="0"
              data-rbd-droppable-id="track_table"
              data-testid="track-table-body"
              role="rowgroup"
            >
              <div
                class="track_table_virtualized_list"
                style="position: relative; height: 600px; width: 600px; overflow: auto; will-change: transform; direction: ltr;"
              >
                <div
                  style="height: 84px; width: 100%;"
                >
                  <div
                    class="grid_track_table_row"
                    data-rbd-draggable-context-id="0"
                    data-rbd-draggable-id="1"
                    data-testid="track-table-row"
                    role="row"
                    style="position: absolute; left: 0px; top: 0px; height: 42px; width: 100%; grid-template-columns: 7.5em 4em 3em minmax(8em, 1fr) 6em 3em;"
                    tabindex="1"
                  >
                    <div
                      class="selection_cell"
                      role="cell"
                    >
                      <div
                        class="ui fitted checkbox nuclear checkbox"
                        style="cursor: pointer;"
                      >
                        <input
                          class="hidden"
                          readonly=""
                          tabindex="-1"
                          title="Toggle Row Selected"
                          type="checkbox"
                          value=""
                        />
                        <label />
                      </div>
                    </div>
                    <div
                      class="grid_track_table_cell position_cell"
                      data-testid="position-cell"
                      role="cell"
                    >
                      <button
                        class="ui pink tiny circular icon button nuclear button play_button"
                        data-testid="play-now"
                      >
                        <i
                          aria-hidden="true"
                          class="play icon"
                        />
                      </button>
                      <span
                        class="position_cell_value"
                      >
                        1
                      </span>
                    </div>
                    <div
                      class="grid_track_table_cell thumbnail_cell"
                      role="cell"
                    />
                    <div
                      class="grid_track_table_cell text_cell title_cell"
                      data-testid="title-cell"
                      role="cell"
                    >
                      <span
                        class="title_cell_content"
                      >
                        <span
                          class="title_cell_value"
                        >
                          test track 2
                        </span>
                        <span
                          class="title_cell_buttons"
                        >
                          <button
                            class="ui tiny basic circular icon button nuclear button borderless title_cell_button"
                            data-testid="add-to-queue"
                          >
                            <i
                              aria-hidden="true"
                              class="plus icon"
                            />
                          </button>
                          <button
                            class="ui tiny basic circular icon button nuclear button borderless title_cell_button"
                            data-testid="track-popup-trigger"
                          >
                            <i
                              aria-hidden="true"
                              class="ellipsis horizontal icon"
                            />
                          </button>
                        </span>
                      </span>
                    </div>
                    <div
                      class="grid_track_table_cell text_cell"
                      role="cell"
                    >
                      test artist 2
                    </div>
                    <div
                      class="delete_cell"
                      data-testid="delete-cell"
                      role="cell"
                    >
                      <button
                        class="ui tiny basic circular icon button nuclear button borderless"
                        data-testid="delete-button"
                      >
                        <i
                          aria-hidden="true"
                          class="times icon"
                        />
                      </button>
                    </div>
                  </div>
                  <div
                    class="grid_track_table_row"
                    data-rbd-draggable-context-id="0"
                    data-rbd-draggable-id="0"
                    data-testid="track-table-row"
                    role="row"
                    style="position: absolute; left: 0px; top: 42px; height: 42px; width: 100%; grid-template-columns: 7.5em 4em 3em minmax(8em, 1fr) 6em 3em;"
                    tabindex="0"
                  >
                    <div
                      class="selection_cell"
                      role="cell"
                    >
                      <div
                        class="ui fitted checkbox nuclear checkbox"
                        style="cursor: pointer;"
                      >
                        <input
                          class="hidden"
                          readonly=""
                          tabindex="-1"
                          title="Toggle Row Selected"
                          type="checkbox"
                          value=""
                        />
                        <label />
                      </div>
                    </div>
                    <div
                      class="grid_track_table_cell position_cell"
                      data-testid="position-cell"
                      role="cell"
                    >
                      <button
                        class="ui pink tiny circular icon button nuclear button play_button"
                        data-testid="play-now"
                      >
                        <i
                          aria-hidden="true"
                          class="play icon"
                        />
                      </button>
                      <span
                        class="position_cell_value"
                      >
                        2
                      </span>
                    </div>
                    <div
                      class="grid_track_table_cell thumbnail_cell"
                      role="cell"
                    />
                    <div
                      class="grid_track_table_cell text_cell title_cell"
                      data-testid="title-cell"
                      role="cell"
                    >
                      <span
                        class="title_cell_content"
                      >
                        <span
                          class="title_cell_value"
                        >
                          test track 1
                        </span>
                        <span
                          class="title_cell_buttons"
                        >
                          <button
                            class="ui tiny basic circular icon button nuclear button borderless title_cell_button"
                            data-testid="add-to-queue"
                          >
                            <i
                              aria-hidden="true"
                              class="plus icon"
                            />
                          </button>
                          <button
                            class="ui tiny basic circular icon button nuclear button borderless title_cell_button"
                            data-testid="track-popup-trigger"
                          >
                            <i
                              aria-hidden="true"
                              class="ellipsis horizontal icon"
                            />
                          </button>
                        </span>
                      </span>
                    </div>
                    <div
                      class="grid_track_table_cell text_cell"
                      role="cell"
                    >
                      test artist 1
                    </div>
                    <div
                      class="delete_cell"
                      data-testid="delete-cell"
                      role="cell"
                    >
                      <button
                        class="ui tiny basic circular icon button nuclear button borderless"
                        data-testid="delete-button"
                      >
                        <i
                          aria-hidden="true"
                          class="times icon"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="nuclear player_bar"
  >
    <div
      class="nuclear seekbar"
      data-testid="seekbar"
    >
      <div
        class="nuclear seekbar_progress"
        data-testid="seekbar-fill"
        style="width: 0%;"
      />
    </div>
    <div
      class="player_bar_bottom"
    >
      <div
        class="track_info"
      >
        <div
          class="nuclear cover_container"
        />
      </div>
      <div
        class="player_controls"
      >
        <button
          class="player_button disabled"
          data-testid="player-controls-back"
        >
          <i
            aria-hidden="true"
            class="step backward large inverted icon"
          />
        </button>
        <button
          class="player_button disabled"
          data-testid="player-controls-play"
        >
          <i
            aria-hidden="true"
            class="play big inverted icon"
          />
        </button>
        <button
          class="player_button disabled"
          data-testid="player-controls-forward"
        >
          <i
            aria-hidden="true"
            class="step forward large inverted icon"
          />
        </button>
      </div>
      <div
        class="volume_controls_container"
      >
        <div
          class="play_options"
        >
          <i
            aria-hidden="true"
            class="heartbeat large icon play_option_icon"
            data-testid="rate-play-option"
          />
          <i
            aria-hidden="true"
            class="repeat large icon play_option_icon"
            data-testid="loop-play-option"
          />
          <i
            aria-hidden="true"
            class="random large icon play_option_icon"
            data-testid="shuffle-play-option"
          />
          <i
            aria-hidden="true"
            class="magic large icon play_option_icon"
            data-testid="autoradio-play-option"
          />
          <i
            aria-hidden="true"
            class="compress large icon play_option_icon"
            data-testid="mini-player-play-option"
          />
        </div>
        <div
          class="volume_controls"
        >
          <div
            class="volume_icon"
          >
            <i
              aria-hidden="true"
              class="volume up large icon"
            />
          </div>
          <div
            class="volume_slider"
          >
            <div
              class="range"
              style="width: 100%;"
            >
              <div
                class="baseDiv"
                style="height: 12px;"
              >
                <div
                  class="track"
                  style="border-radius: 4px; background: rgb(68, 71, 90); top: 4px; height: 4px;"
                />
                <div
                  class="fill"
                  style="border-radius: 4px; background: rgb(248, 248, 242); width: calc(100% * 0.5 + 6px); top: 4px; height: 4px;"
                />
                <div
                  class="thumb"
                  style="width: 12px; height: 12px; border-radius: 12px; background: rgb(248, 248, 242);"
                />
                <input
                  class="range_input"
                  max="100"
                  min="0"
                  style="top: 4px; height: 12px; width: calc(100% - 12px); margin-left: 6px; margin-right: 6px;"
                  type="range"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-atomic="true"
    aria-live="assertive"
    id="rbd-announcement-0"
    style="position: absolute; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%);"
  />
  <div
    id="rbd-hidden-text-0-hidden-text-0"
    style="display: none;"
  >
    
  Press space bar to start a drag.
  When dragging you can use the arrow keys to move the item around and escape to cancel.
  Some screen readers may require you to be in focus mode or to use your pass through key

  </div>
</DocumentFragment>
`;
